# OOP-I

./: README.md
CMakeProject2/: CMakeLists.txt
CMakeProject2/CMakeProject2/: Almacen.cpp  Almacen.h  CMakeLists.txt  CMakeProject2.cpp  CMakeProject2.h  Robot.cpp  Robot.h  Slot.cpp  Slot.h  casilla.cpp  casilla.h  tipos.h
